--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,8 @@ vala_precompile(LIBGCOUCHBASE_VALA_C
 	GenericResult.vala
 	GetResult.vala
 	StoreResult.vala
+	JSON/Serializer.vala
+	JSON/Deserializer.vala
 PACKAGES
 	${DEFAULT_PACKAGES}
 OPTIONS
