--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ vala_precompile(LIBGCOUCHBASE_VALA_C
 	StoreResult.vala
 	JSON/Serializer.vala
 	JSON/Deserializer.vala
+	JSON/Node.vala
 PACKAGES
 	${DEFAULT_PACKAGES}
 OPTIONS
@@ -32,7 +33,7 @@ target_link_libraries(${PKGNAME}-${PKGVERSION} ${CORE_DEPS_LIBRARIES})
 configure_file (${CMAKE_CURRENT_SOURCE_DIR}/${PKGNAME}-${PKGVERSION}.pc.cmake ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.pc)
 
 install (
-	FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.vapi ../../${PKGNAME}-${PKGVERSION}.deps
+	FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.vapi ../${PKGNAME}-${PKGVERSION}.deps
 	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/vala/vapi/)
 install (
 	FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.h
