Point to library dir, not library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ SET( CORE_DEPS_CFLAGS_ALL
 
 SET( CORE_DEPS_LIBRARY_DIRS 
 	${CORE_DEPS_LIBRARY_DIRS}
-	${COUCHBASE_LIBRARY})
+	${COUCHBASE_LIBRARY_DIR})
 
 SET( CORE_DEPS_LIBRARIES 
 	${CORE_DEPS_LIBRARIES}
